fix: set z-index to mobile floating menu

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -39,6 +39,8 @@
 	position: fixed;
 	left: 0;
 
+	z-index: 99;
+
 	height: 100vh;
 	height: 100dvh;
 	width: 100%;
